@@ -36,8 +36,8 @@ through VESvault REST API.
 By using libVES or VES utility, you accept VES Integration Terms and Conditions
 https://ves.host/terms_conditions
 
-In summary - VES is always free, unless when it integrated with a service for
-the purpose of providing additional benefits to paying customers.
+In summary - VES is always free, unless when it is integrated with a service
+for the purpose of providing additional benefits to paying customers.
 
 
 DOCUMENTATION:
